--- a/index.html
+++ b/index.html
@@ -1055,10 +1055,6 @@
       outlineCtx.setTransform(1, 0, 0, 1, 0, 0);
       outlineCtx.clearRect(0, 0, outlineCanvas.width, outlineCanvas.height);
       outlineCtx.setTransform(scaleX, 0, 0, scaleY, 0, 0);
-      // white background
-      outlineCtx.fillStyle = "white";
-      outlineCtx.fillRect(0, 0, baseCanvasWidth, baseCanvasHeight);
-
       outlineCtx.strokeStyle = "#bbbbbb";
       outlineCtx.lineWidth = 3;
       outlineCtx.lineCap = "round";
@@ -1440,6 +1436,9 @@
 
     function clearDrawingLayer() {
       drawCtx.clearRect(0, 0, drawCanvas.width, drawCanvas.height);
+      drawCtx.fillStyle = "#ffffff";
+      drawCtx.fillRect(0, 0, drawCanvas.width, drawCanvas.height);
+      drawCtx.beginPath();
     }
 
     function pushHistory() {
@@ -1796,7 +1795,11 @@
       outlineCanvas.width = targetWidth;
       outlineCanvas.height = targetHeight;
 
-      drawCtx.drawImage(tempCanvas, 0, 0, targetWidth, targetHeight);
+      drawCtx.fillStyle = "#ffffff";
+      drawCtx.fillRect(0, 0, targetWidth, targetHeight);
+      if (tempCanvas.width && tempCanvas.height) {
+        drawCtx.drawImage(tempCanvas, 0, 0, targetWidth, targetHeight);
+      }
       drawOutline(currentPage, { clearDrawing: false });
     }
 
